--- a/app/package.json
+++ b/app/package.json
@@ -2,13 +2,14 @@
   "name": "conecta-sebrae",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/wp-content/themes/dalazen/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build-wp": "react-scripts build",
-    "build-staging": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "env-cmd --verbose -f ./env/.env.local react-scripts start",
+    "start:hml": "env-cmd --verbose -f ./env/.env.staging react-scripts start",
+    "start:prod": "env-cmd --verbose -f ./env/.env.production react-scripts start",
+    "build": "env-cmd --verbose -f ./env/.env.production react-scripts build",
+    "build-wp": "env-cmd --verbose -f ./env/.env.production react-scripts build",
+    "build-staging": "env-cmd --verbose -f ./env/.env.staging react-scripts build",
+    "test": "env-cmd --verbose -f ./env/.env.local react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
