--- a/app/package.json
+++ b/app/package.json
@@ -23,11 +23,10 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-input-mask": "^3.0.1",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.2.1",
     "formik": "^2.2.9",
     "i18next": "^20.3.4",
     "moment": "^2.29.1",
-    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.0.0-beta.4",
@@ -42,6 +41,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "sass": "^1.68.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
